--- a/report_ledger/package.json
+++ b/report_ledger/package.json
@@ -13,11 +13,16 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@walletconnect/web3-provider": "^1.7.1",
+    "crypto-js": "^4.1.1",
+    "nano-ipfs-store": "^0.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.7.0",
+    "web3modal": "^1.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
