--- a/report_ledger/package.json
+++ b/report_ledger/package.json
@@ -15,6 +15,7 @@
         "@testing-library/user-event": "^13.5.0",
         "@walletconnect/web3-provider": "^1.7.1",
         "crypto-js": "^4.1.1",
+        "firebase": "^9.6.6",
         "nano-ipfs-store": "^0.1.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
